--- a/main.css
+++ b/main.css
@@ -4,13 +4,193 @@
     padding: 0;
     border-radius: 1%;
   }
+  
+  body {
+    background-image: url(Cooking.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 
-  .header {
+  body.finished {
+    background-image: url(Happy\ Chef.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  header {
+    background-color: white;
+    border-color: whitesmoke;
+    border-radius: 40%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
     text-align: center;
+    width: 20%;
+    font-size: 1.5em;
+  }
+
+   ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-left: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-right: auto;
+    list-style-type: none;
+    justify-content: space-between;
+    width: 60%;
+  } 
+
+  main {
+    width: 100%;
+    height: 100%;
+  }
+
+  .startQuiz {
+    display: block;
+    width: 30%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    border-style: solid;
+    border-color: whitesmoke;
+    background-color: white;
+    border-radius: 4%;
+  }
+
+  h1 {
+    font-size: 2em;
+    margin: 5%;
+  }
+
+  .startButton {
+    font-size: 2em;
+    margin: 5%;
+  }
+
+  .questions {
+    display: block;
+    background-color: white;
+    border-color: whitesmoke;
+    border-radius: 3%;
+    width: 50%;
+    height: 40%;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+  }
+
+  fieldset {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 3%;
+  }
+
+  legend {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-size: 2em;
+  }
+
+  .questions input {
+    display: inline;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    size: 2em;
+  }
+
+  .questions span {
+    display: inline;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    size: 2em;
+  }
+
+  .submitButton {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 2%;
+  }
+
+  label p {
+    display: inline-block;
+    font-style: italic;
+    border-color: blanchedalmond;
+    background-color: burlywood;
+  }
+
+  .nextButton {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 2%;
+  }
+
+  .results {
+    display: block;
+    width: 30%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    border-style: solid;
+    border-color: whitesmoke;
+    background-color: white;
+    border-radius: 4%;
+  }
+
+  .results p {
+    font-size: 2em;
+    margin: 5%;
+  }
+
+  .restartButton {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 2%;
   }
 
   .hidden {
       display: none;
   }
 
-  
+  /*For some reason the labels and radios aren't sizing right
+
+  /*@media screen and (min-width: 768px) {
+    styles for a tablet
+    make flex-direction for header ul row
+  }*/
+
+  /*@media screen and (min-width: 1280px) {
+    styles for a tablet
+    make flex direction for header ul row
+  }*/
