--- a/main.css
+++ b/main.css
@@ -20,14 +20,18 @@
   header {
     background-color: white;
     border-color: whitesmoke;
-    border-radius: 40%;
+    border-radius: 30%;
     display: flex;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
     text-align: center;
     width: 20%;
-    font-size: 1.5em;
+    font-size: 1em;
+  }
+
+  header span {
+    font-size: 1em;
   }
 
    ul {
@@ -40,8 +44,12 @@
     margin-right: auto;
     list-style-type: none;
     justify-content: space-between;
-    width: 60%;
+    width: 90%;
   } 
+
+  li {
+    font-weight: 700;
+  }
 
   main {
     width: 100%;
@@ -61,17 +69,18 @@
     flex-direction: column;
     border-style: solid;
     border-color: whitesmoke;
+    border-width: thick;
     background-color: white;
     border-radius: 4%;
   }
 
   h1 {
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 5%;
   }
 
   .startButton {
-    font-size: 2em;
+    font-size: 1.25em;
     margin: 5%;
   }
 
@@ -79,6 +88,7 @@
     display: block;
     background-color: white;
     border-color: whitesmoke;
+    border-width: thick;
     border-radius: 3%;
     width: 50%;
     height: 40%;
@@ -93,13 +103,16 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 3%;
+    padding: 10%;
+    border-width: 0;
   }
 
   legend {
     display: flex;
     text-align: center;
     justify-content: center;
-    font-size: 2em;
+    padding-top: 5%;
+    font-size: 1.5em;
   }
 
   .questions input {
@@ -108,7 +121,7 @@
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    size: 2em;
+    size: 1.5em;
   }
 
   .questions span {
@@ -117,13 +130,13 @@
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    size: 2em;
+    size: 1.5em;
   }
 
   .submitButton {
     display: flex;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: 1.25em;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
@@ -134,13 +147,14 @@
     display: inline-block;
     font-style: italic;
     border-color: blanchedalmond;
+    border-width: thick;
     background-color: burlywood;
   }
 
   .nextButton {
     display: flex;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: 1.25em;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
@@ -165,32 +179,95 @@
   }
 
   .results p {
-    font-size: 2em;
+    font-size: 1.5em;
     margin: 5%;
   }
 
   .restartButton {
     display: flex;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: 1.25em;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
     margin-bottom: 2%;
   }
 
+  span {
+    font-size: 1.5em;
+    font-weight: 300;
+  }
+
   .hidden {
       display: none;
   }
 
-  /*For some reason the labels and radios aren't sizing right
+  .radio {
+    
+  }
 
-  /*@media screen and (min-width: 768px) {
-    styles for a tablet
-    make flex-direction for header ul row
-  }*/
+  /*For some reason the radios aren't sizing right */
 
-  /*@media screen and (min-width: 1280px) {
-    styles for a tablet
-    make flex direction for header ul row
-  }*/
+  @media screen and (min-width: 768px) {
+    ul {
+      flex-direction: row;
+    }
+
+    ul.li {
+      font-size: 1.5em;
+    }
+
+    .button {
+      font-size: 1.5em;
+    }
+
+    legend {
+      font-size: 2em;
+    }
+
+    .questions input {
+      font-size: 2em;
+    }
+
+    .results p {
+      font-size: 2em;
+    }
+
+    fieldset {
+      padding-left: 15%;
+    }
+
+    span {
+      font-size: 2em;
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+     ul {
+      flex-direction: row;
+    }
+
+    .button {
+      font-size: 1.75em;
+    }
+
+    legend {
+      font-size: 2.5em;
+    }
+
+    .questions input {
+      font-size: 2.5em;
+    }
+
+    .results p {
+      font-size: 2.5em;
+    }
+
+    fieldset {
+      padding-left:20%;
+    }
+
+    span {
+      font-size: 2.5em;
+    }
+  }
