--- a/main.css
+++ b/main.css
@@ -206,6 +206,20 @@
     
   }
 
+  .button {
+    background-color: white;
+    color: black;
+    padding: 15px 32px;
+    border-radius: 4px;
+    border: 2px solid black;
+  }
+
+  .button:hover {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 4px;
+  }
+
   /*For some reason the radios aren't sizing right */
 
   @media screen and (min-width: 768px) {
