--- a/main.css
+++ b/main.css
@@ -5,14 +5,18 @@
     border-radius: 1%;
   }
   
+  html, body {
+    min-height:
+  }
+
   body {
-    background-image: url(Cooking.jpg);
+    background-image: url(cooking.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
 
   body.finished {
-    background-image: url(Happy\ Chef.jpg);
+    background-image: url(happychef.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -27,10 +31,7 @@
     margin-top: 3%;
     text-align: center;
     width: 20%;
-    font-size: 1em;
-  }
-
-  header span {
+    min-width: 10em;
     font-size: 1em;
   }
 
@@ -50,10 +51,9 @@
   li {
     font-weight: 700;
   }
-
-  main {
-    width: 100%;
-    height: 100%;
+  li > span {
+    font-weight: 300;
+    font-size: 1.2em;
   }
 
   .startQuiz {
@@ -90,7 +90,7 @@
     border-color: whitesmoke;
     border-width: thick;
     border-radius: 3%;
-    width: 50%;
+    width: 75%;
     height: 40%;
     justify-content: center;
     margin-left: auto;
@@ -141,6 +141,7 @@
     margin-right: auto;
     margin-top: 3%;
     margin-bottom: 2%;
+    padding-bottom: 20%;
   }
 
   label p {
@@ -216,15 +217,18 @@
     border-radius: 4px;
   }
 
-  /*For some reason the radios aren't sizing right */
-
   @media screen and (min-width: 768px) {
-    ul {
+    /*ul {
       flex-direction: row;
+    }*/
+
+    ul > li > span {
+      font-size: 1em;
     }
 
-    ul.li {
-      font-size: 1.5em;
+    li {
+      font-size: 1.2em;
+      padding: 3%;
     }
 
     .button {
@@ -233,6 +237,10 @@
 
     legend {
       font-size: 2em;
+    }
+
+    .questions {
+      width: 50%;
     }
 
     .questions input {
@@ -257,6 +265,14 @@
       flex-direction: row;
     }
 
+    li {
+      font-size: 1.8em;
+    }
+
+    ul > li > span {
+      font-size: 1em;
+    }
+
     .button {
       font-size: 1.75em;
     }
@@ -267,6 +283,10 @@
 
     .questions input {
       font-size: 2.5em;
+    }
+
+    .questions {
+      width: 50%;
     }
 
     .results p {
