--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@
     margin-left: auto;
     margin-right: auto;
     flex-direction: column;
+    padding-bottom: 2%;
   }
 
   fieldset {
@@ -141,15 +142,19 @@
     margin-right: auto;
     margin-top: 3%;
     margin-bottom: 2%;
-    padding-bottom: 20%;
+    padding-bottom: 3%;
+    background-color: pink;
   }
 
   label p {
     display: inline-block;
     font-style: italic;
-    border-color: blanchedalmond;
+    font-size: 1.5em;
+    padding-left: 3%;
+    padding-right: 3%;
+    /* border-color: blanchedalmond;
     border-width: thick;
-    background-color: burlywood;
+    background-color: burlywood; */
   }
 
   .nextButton {
@@ -160,6 +165,7 @@
     margin-right: auto;
     margin-top: 3%;
     margin-bottom: 2%;
+    padding-bottom: 3%;
   }
 
   .results {
@@ -197,6 +203,16 @@
   span {
     font-size: 1.5em;
     font-weight: 300;
+  }
+
+  .correct {
+    border-radius: 4px;
+    border: 2px solid #4CAF50;
+  }
+
+  .incorrect {
+    border-radius: 4px;
+    border: 2px solid red;
   }
 
   .hidden {
