--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
   }
 
   body {
-    background-image: url(cooking.jpg);
+    background-image: url(cookingbackground.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
